# zcmf-zero_coupling_module_framework

./: .gitignore  README.md  build.sh  integration.py  version_depend.json
cmake/: FindJsoncpp.cmake  FindOpenCV.cmake  FindProtobuf.cmake  FindTools.cmake  FindZmq.cmake
code/: CMakeLists.txt
code/src/corelib/: CMakeLists.txt
code/src/corelib/include/core/: README.md  data_type.hpp  definitions.h  double_buffer_data.hpp  double_buffered_queue.hpp  double_buffered_vector.hpp
code/src/corelib/include/diag/: README.md  diagnose.hpp  frequence.hpp  udp.hpp
code/src/corelib/include/log/: README.md  iv_log.h  log_interface.h  logging.h
code/src/corelib/include/message/: README.md  messager.hpp
code/src/corelib/include/pipe/: README.md  pipe_controller.hpp  pipe_element.hpp  taskpool_element.hpp  timer_element.hpp  timer_trigger.hpp
code/src/corelib/include/ulg/: README.md  messages.h  ulg.h
code/src/corelib/include/utils/: README.md  app_config.hpp  app_preference.hpp  app_util.hpp  data_reader.hpp  data_recoder.hpp  dl_utils.hpp  json_writer.hpp  math_util.hpp  timer_counter.hpp
code/src/corelib/include/zmq/: zmq.hpp
code/src/corelib/src/ulog/: ulg.cpp
code/src/input_result_zmq/: CMakeLists.txt  README.md
code/src/input_result_zmq/src/: input_result_zmq.cpp  input_result_zmq.h  plugin.cpp
code/src/iv_task/: CMakeLists.txt
code/src/iv_task/src/: main.cpp  main_loop.cpp  main_loop.h
code/src/output_result_zmq/: CMakeLists.txt  README.md
code/src/output_result_zmq/src/: output_result_zmq.cpp  output_result_zmq.h  plugin.cpp
code/src/proto_data/: CMakeLists.txt  README.md
code/src/proto_data/data/: qnxproc.pb.cc  qnxproc.pb.h
code/src/proto_data/proto/: data_info.proto  failsafe_data.proto  qnxproc.proto
code/src/server_log/: CMakeLists.txt  README.md
code/src/server_log/src/: flogger.cpp  flogger.h  plugin.cpp  server_log.cpp  server_log.h
code/src/server_proc/: CMakeLists.txt  README.md
code/src/server_proc/src/: plugin.cpp  server_proc.cpp  server_proc.h  server_proc_task.cpp  server_proc_task.h
code/src/utilities/: CMakeLists.txt  README.md
code/src/utilities/include/: proc.h
code/src/utilities/src/: proc.cpp  proc_main.cpp
doc/zcmf-zero_coupling_module_framework.wiki/: Home.md  log模块说明.md  messager-模块说明.md  pipe-模块说明.md  server_proc模块说明.md  utils模块说明.md  自定义数据类型介绍.md  诊断模块说明.md
opt/: auto_completion.sh  run.sh
opt/config/: banned_area.json
opt/config/ini/: iv_log.ini  priority.ini  server_debug.ini  ulogger.ini  zmqio.ini
